--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "magento/framework": "*",
         "magento/module-catalog": "*",
-        "mateuszmesek-magento2/module-document-data": "^1.0"
+        "mateuszmesek-magento2/module-document-data-product-category": "*",
+        "mateuszmesek-magento2/module-document-data-indexer": "*"
     },
     "replace": {
         "mateuszmesek-magento2/module-document-data-catalog-product-indexer": "*"
