--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,11 @@
     "description": "N/A",
     "type": "magento2-module",
     "require": {
+        "php": ">=8.1",
         "magento/framework": "*",
         "magento/module-catalog": "*",
-        "mateuszmesek-magento2/module-document-data-catalog-product": "*",
-        "mateuszmesek-magento2/module-document-data-index-indexer": "*"
+        "mateuszmesek-magento2/module-document-data-catalog-product": "^1.0",
+        "mateuszmesek-magento2/module-document-data-index-indexer": "^1.0"
     },
     "license": [
         "MIT"
@@ -16,7 +17,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "MateuszMesek\\DocumentDataCatalogProductIndexer\\": "src"
+            "MateuszMesek\\DocumentDataCatalogProductIndexer\\": ""
         }
     }
 }
